Fixed issue with fields during edit on mobile.

--- a/src/scss/_responsive.scss
+++ b/src/scss/_responsive.scss
@@ -60,6 +60,10 @@
           display: flex;
           justify-content: space-between;
           padding: 10px 55px 10px 25px;
+          &:focus{
+            margin-right: 50px;
+            padding-right: 5px;
+          }
           &:nth-of-type(4){
             position: relative;
             padding: 0px;
@@ -77,7 +81,7 @@
             pointer-events: none;
             i{
               position: absolute;
-              top: -90px;
+              top: -105px;
               right: 15px;
               pointer-events: all;
             }
